--- a/index.html
+++ b/index.html
@@ -4,6 +4,90 @@
     <title>my webpage</title>
   </head>
   <body>
-    <h1>hello world!</h1>
+    <div>
+2
+<h1 style="color: red">
+3
+  I am a meaningless code from 2022
+4
+</h1>
+5
+<h2>
+6
+i know nothing
+7
+</h2>
+8
+<h2>
+9
+and yet everything
+10
+</h2>
+11
+<h1>
+12
+i have been meaningless for <span id="time">0</span> seconds
+13
+</h1>
+14
+​
+15
+<span id="minutes">0</span> minutes
+16
+<span id="hours">0</span> hours
+17
+<span id="days">0</span> days
+18
+​
+19
+</div> 
+JavaScript + No-Library (pure JS)
+Tidy
+1
+​
+2
+var time=0;
+3
+var minutes = 0;
+4
+var hours=0;
+5
+var days=0
+6
+​
+7
+setInterval(() => {
+8
+  document.getElementById("time").innerHTML = time;
+9
+  time += 1;
+10
+}, 1000)
+11
+setInterval(() => {
+12
+  document.getElementById("minutes").innerHTML = minutes;
+13
+  minutes += 1;
+14
+}, 60 * 1000)
+15
+setInterval(() => {
+16
+  document.getElementById("hours").innerHTML = hours;
+17
+  hours += 1;
+18
+}, 3600000)
+19
+​
+20
+setInterval(() => {
+21
+  document.getElementById("days").innerHTML = days;
+22
+  days += 1;
+23
+}, 3600000*24)
   </body>
 </html>
