--- a/index.html
+++ b/index.html
@@ -1,5 +1,40 @@
 <!DOCTYPE html>
 <html>
+  <h1 style="color: red">
+3
+  I am a meaningless code from 2022
+4
+</h1>
+5
+<h2>
+6
+i know nothing
+7
+</h2>
+8
+<h2>
+9
+and yet everything
+10
+</h2>
+11
+<h1>
+12
+i have been meaningless for <span id="time">0</span> seconds
+13
+</h1>
+14
+​
+15
+<span id="minutes">0</span> minutes
+16
+<span id="hours">0</span> hours
+17
+<span id="days">0</span> days
+18
+​
+19
+</div> 
   <head>
     <title>my webpage</title>
   </head>
@@ -41,8 +76,7 @@ i have been meaningless for <span id="time">0</span> seconds
 ​
 19
 </div> 
-JavaScript + No-Library (pure JS)
-Tidy
+
 1
 ​
 2
